# go_slash

./: .gitignore  Cargo.toml  Procfile  README.md  RustConfig  package.json  shortcuts  shortcuts.yaml
.github/workflows/: CI.yml  CI.yml.disabled
chrome/: config.html  config.js  manifest.json  proxy.js
cli/: Cargo.toml
cli/src/: main.rs
js/go-front/: package.json  vue.config.js
src/: lib.rs  main.rs  models.rs
src/controllers/: shortcuts.rs
templates/: header.html.hbs  index.html.hbs  layout.html.hbs  shortcut.html.hbs  shortcut_not_found.html.hbs
test_dir/: filename_b6c43bc7-2ceb-4ee2-9a9f-8bad497bb4dd.yml
tests/: helpers.rs  index.rs  server.rs  shortcuts.rs
vue/: README.md  package.json  vue.config.js
vue/src/pages/search/: App.vue
vue/src/partials/search/: App.vue  Partial.vue  Search.vue  ShortcutInput.vue  ShortcutList.vue  main.ts
web/: .env  .gitignore  Cargo.toml  Procfile  docker-compose.yml  features.yaml  go.db  go.db-shm  go.db-wal  shortcuts.yaml  simple_users.yaml
web/migrations/2022-03-20-101929_base/: down.sql  up.sql
web/migrations/2022-03-20-101929_create_shortcuts/: down.sql  up.sql
web/migrations/2022-03-21-174119_users/: up.sql
web/migrations/2022-03-21-185629_global_features/: down.sql  up.sql
web/migrations/2022-03-26-145834_teams/: down.sql  up.sql
web/src/: errors.rs  guards.rs  lib.rs  login.rs  main.rs  middlewares.rs  models.rs  schema.rs  template.rs  views.rs
web/src/controllers/: features.rs  login.rs  mod.rs  settings.rs  shortcuts.rs  teams.rs  users.rs
web/src/models/: features.rs  mod.rs  settings.rs  shortcuts.rs  teams.rs  users.rs
web/src/services/: mod.rs  oidc.rs
web/src/settings/: controller.rs  mod.rs  models.rs
web/src/shortcuts/: controller.rs  mod.rs  models.rs
web/src/teams/: controller.rs  mod.rs  models.rs
web/src/users/: controller.rs  mod.rs  models.rs  sessions.rs
web/templates/: error.html.hbs  features.html.hbs  header.html.hbs  index.html.hbs  layout.html.hbs  login.html.hbs  redirect_login.html.hbs  settings.html.hbs  teams.html.hbs  users.html.hbs
web/tests/: features.rs  features.rs.off  health.rs  helpers.rs  index.rs  index_actions.rs  index_delete_shortcut.rs  index_search.rs  index_shortcut.rs  index_shortcut_write.rs  index_team.rs  index_user.rs  logged_in.rs  login_oauth.rs  login_with_mail_pwd.rs  login_with_oauth.rs  shortcuts.rs  shortcuts_delete.rs  shortcuts_put.rs  shortcuts_redirect.rs  team_shortcuts.rs  teams.rs  teams_actions.rs  teams_actions_admin.rs  teams_list.rs  teams_list_actions.rs  teams_list_user_actions.rs  teams_user_actions.rs  use_shortcut.rs  users.rs  users_list.rs
web/tests/utils/: factories.rs  helpers.rs  mod.rs  selectors.rs
web/vue/: package-lock.json  package.json  vue.config.js
web/vue/public/: index.html  search.html
web/vue/src/: models.ts
web/vue/src/components/: Capabilities.vue
web/vue/src/partials/features/: Partial.vue  SwitchGroup.vue
web/vue/src/partials/login/: Partial.vue
web/vue/src/partials/search/: Partial.vue  Search.vue  ShortcutInput.vue  ShortcutList.vue  TeamEditor.vue  UserList.vue
web/vue/src/partials/settings/: Partial.vue  main.ts
web/vue/src/partials/teams/: CreateTeamForm.vue  CreateTeamModal.vue  CreateTeamSuccess.vue  Partial.vue  TeamList.vue  TeamRow.vue  UserTeamList.vue  main.ts
web/vue/src/partials/users/: Capabilities.vue  Partial.vue
