[package]
name = "go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
log = "0.4.0"
serde_json = "1.0"

[dev-dependencies]
thirtyfour = "0.28.1"