[package]
name = "go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
log = "0.4.0"
serde = "1.0"
serde_json = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
rustbreak = { version = "2", features = ["yaml_enc"] }

[dev-dependencies]
thirtyfour = "0.28.1"
uuid = { version = "0.8.2", features = ["v4"] }