[package]
name = "go_web"
version = "1.0.0"
edition = "2021"

[features]
mock = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.11"
lazy_static = "1.5"
rustbreak = { version = "2", features = ["yaml_enc"] }
uuid = { version = "1.17", features = ["v4"] }
sha256 = "1.6"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
dotenv = "0.15.0"
fern = "0.6.0"
chrono = "0.4.19"
serial_test = "0.6.0"
strum = "0.24.0"
strum_macros = "0.24.0"
openidconnect = "2.3.1"
faux = "^0.1"

[dev-dependencies]
thirtyfour = "0.28.1"
