[package]
name = "go_web"
version = "1.0.0"
edition = "2021"

[features]
mock = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.11"
lazy_static = "1.5"
rustbreak = { version = "2", features = ["yaml_enc"] }
uuid = { version = "1.17", features = ["v4"] }
sha256 = "1.6"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0"
r2d2 = "0.8"
dotenv = "0.15"
fern = "0.7"
chrono = "0.4"
serial_test = "3.2"
strum = "0.27"
strum_macros = "0.27"
openidconnect = "2.3.1"
faux = "0.1"

[dev-dependencies]
thirtyfour = "0.36.1"
thirtyfour-testing-library-ext = "0.1.1"
